--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -9,6 +9,12 @@ $fa-font-path: "../fonts/webfonts" !default;
 
 @import "~bootstrap/scss/bootstrap";
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .color-purple {
     color: rgb(69, 0, 99);
 }
@@ -29,4 +35,56 @@ $fa-font-path: "../fonts/webfonts" !default;
 
 .pt-6 {
     padding-top: 160px;
+}
+
+.main-container{
+    display: flex;
+    gap: 50px;
+    width: 100%;
+    height: 100vh;
+
+    .aside{
+        margin: 10px;
+        padding: 10px;
+        gap: 20px;
+        width: 20%;
+        height: 100%;
+        border: 1px solid lightgray;
+        border-radius: 5px;
+
+       a{
+        color: black;
+        font-weight: bold;
+        background-color: lightgray;
+        border-radius: 8px;
+        padding: 10px;
+        text-decoration: none;
+
+        &:hover {
+
+            color: white;
+        }
+       }
+
+       
+    }
+
+    .restaurant-info{
+
+        width: 80%;
+
+        
+
+        .img-container{
+            width: 300px;
+            height: 300px;
+
+            img{
+                width: 100%;
+                object-fit: cover;
+            }
+
+        }
+    }
+
 }
