--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -64,6 +64,7 @@ $fa-font-path: "../fonts/webfonts" !default;
 
             color: white;
         }
+        
        }
 
        
@@ -73,18 +74,65 @@ $fa-font-path: "../fonts/webfonts" !default;
 
         width: 80%;
 
+        ul{
+
+
+            .restaurant-name{
+
+                text-align: center;
+                font-size: 2em;
+                text-transform: uppercase;
+                font-weight: bold;
+            }
+
+            li{
+
+                list-style-type: none;
+
+            }
+        }
+
         
 
         .img-container{
             width: 300px;
             height: 300px;
+            border: 1px solid black;
+            border-radius: 50px;
+            overflow: hidden;
 
             img{
                 width: 100%;
+                height: 100%;
                 object-fit: cover;
+                
+                
             }
 
         }
     }
 
+}
+
+
+
+
+
+.form-container{
+
+    width: 50%;
+
+    form {
+
+        width: 100%;
+
+        div{
+            width: 100%;
+
+            input{
+
+                width: 100%;
+            }
+        }
+    }
 }
