--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -136,3 +136,27 @@ $fa-font-path: "../fonts/webfonts" !default;
         }
     }
 }
+
+
+.dish-info{
+
+
+    .img-container{
+
+        width: 300px;
+            height: 300px;
+            border: 1px solid black;
+            border-radius: 50px;
+            overflow: hidden;
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                
+                
+            }
+
+
+    }
+}
