--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -138,27 +138,43 @@ $fa-font-path: "../fonts/webfonts" !default;
 }
 
 
-.dish-info{
+.dishes-info{
+
+    display: flex;
+    gap: 30px;
+    width: 100%;
+    height: 100%;
+    flex-wrap: wrap;
 
 
-    .img-container{
+    .dish-container{
 
-        width: 300px;
-            height: 300px;
-            border: 1px solid black;
-            border-radius: 50px;
-            overflow: hidden;
+        padding: 10px;
+        border: 1px solid gray;
+        border-radius: 20px;
+        background-color: lightgray;
+        width: calc(100% / 4 - 30px) ;
 
-            img{
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                
-                
-            }
-
-
+        .img-container{
+    
+                width: 300px;
+                height: 300px;
+                border: 1px solid black;
+                border-radius: 50px;
+                overflow: hidden;
+    
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    
+                    
+                }
+    
+    
+        }
     }
+
 }
 
 
